assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto:wght@300&display=swap');

/* mobile-first design */
/* grid structure styling */

body {
background-color: turquoise;
font-family: "roboto", sans-serif;
font-weight: 300;
color: #2f4f4f;
}

h1 {
font-family: "roboto condensed", sans-serif;
font-weight: 200;
color: #2f4f4f;
text-transform: capitalize;
letter-spacing: 3px;
}

h2 {
font-family: "roboto condensed", sans-serif;
text-align: left;
padding-top: 3px;
padding-bottom: 3px;
font-size: 130%;
}

h3 {
font-family: "roboto condensed", sans-serif;
text-align: left;
padding-top: 3px;
padding-bottom: 3px;
font-size: 100%;
}

p {
font-family: roboto, sans-serif;
padding: 10px;
line-height: 30px;
}

img {
max-width: 100%;
}

#container {
  display: grid;
  grid-gap: 10px 10px;
  padding: 10px;
}

#game-header {
  background: whitesmoke;
  grid-row: 1; 
  padding: 10px;
  text-align: center;
}

#game-header h2 {
  text-align: center;
}

#game-area {
  background: whitesmoke;
  grid-row: 3; 
  padding: 10px;
}

/* #game-rules {
  background: whitesmoke;
  grid-row: 2; 
  padding: 5px;
  padding-right: 25px;
} */

/* styling all types of buttons in the game and page */
button, .button, input[type="button"], input[type="submit"] {
  background-color: #1ab5db; 
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  border-radius: 4px;
}

/* game rules modal */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* game rules content box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 80%; 
}

/* closing the game rules modal */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

#footer-social {
  background: whitesmoke;
  grid-row: 4; 
  padding: 5px;
  text-align: center;
}

#game-image {
  text-align: center;
}

#game-input {}

#game-message {}


#user-score {
  margin: 10px;
  border: 3px;
  border-style:solid;
  border-color: aquamarine;
  padding: 10px;
  font-weight: 200; 
  font-size: 150%;
  color: #2f4f4f;
  letter-spacing: 3px;
}

.hide {
  display: none;
}

/* tablet view */
@media screen and (min-width: 600px) {
  #container {
    justify-content: center;
    align-items: center;
  }
}

/* desktop view */
@media screen and (min-width: 1000px) {
  #container {
    justify-content: center;
    align-items: center;
  }
  }

